# robotice

./: .coveragerc  .gitignore  .travis.yml  AUTHORS  CONTRIBUTING.rst  ChangeLog  HISTORY  HISTORY.rst  LICENSE  README.md  README.rst  celeryconfig.py  daemon.py  daemon_test.py  models.py  monitor.py  planner.py  reactor.py  reasoner.py  requirements.txt  robotice-monitor.py  robotice-planner.py  robotice.py  robotice2.py  robotice_one_time.py  setup.cfg  setup.py  simple.pwm.beaglebone.py  simple_daemon.py  simple_fsr_sensor.py  simple_gpio_beaglebone.py  simple_gpio_rpi.py  simple_gpio_test.py  simple_light_sensor.py  simple_monitor.py  test_reasoner.py  utils.py  worker_monitor.py  worker_planner.py  worker_reactor.py  (+1 more)
actuators/: sispm.py  sispm_test.py  test_sispm.py
docs/: Makefile  beaglebone.md  make.bat
etc/: api-paste.ini
monitor/: tasks.py
planner/: tasks.py
plans/: basic.yml
reactor/: tasks.py
reasoner/: tasks.py
requirements/: default.txt  pkgutils.txt  requirements_armv6l.txt  requirements_armv7l.txt  requirements_i686.txt  requirements_x86.txt  requirements_x86_64.txt  test.txt  testing.txt
robotice/: __init__.py  api.py  conf.py  robotice  robotice-cli.py  shell.py  utils.py  worker_monitor.py  worker_planner.py  worker_reactor.py  worker_reasoner.py
robotice.egg-info/: PKG-INFO  SOURCES.txt
robotice_doc/: .buildinfo  objects.inv  py-modindex.html  searchindex.js  supervisor.html
sensors/: dht.py  dummy.py  sis_pm.py
tasks/: monitor.py  planner.py  reactor.py  reasoner.py
tests/: daemon2.py  simple_gpio_beaglebone.py  (+3 more)
(+150 files in other folders)
