[metadata]
name = robotice
summary = Opensource monitoring, reasoning and acting framework.
description-file =
    README.rst
author = Ales Komarek & Michael Kuty
author-email = mail@newt.cz & mail@majklk.cz
home-page = https://github.com/robotice/robotice
classifier =
    Development Status :: 3 - Alpha
    Topic :: System :: Software Distribution
    Intended Audience :: Education
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Operating System :: OS Independent

[files]
packages =
    robotice

[build_sphinx]
all_files = 1
build-dir = docs/build
source-dir = docs/source

[nosetests]
where = robotice/tests
verbosity=2
detailed-errors=1

[upload_sphinx]
upload-dir = docs/.build/html

[wheel]
python-tag = py2

[entry_points]
robotice =
    robotice = robotice.bin.robotice:main
    rbc = robotice.bin.robotice:main
